--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
   ],
   "routes": [
     { "src": "/api/chat", "dest": "/api/chat.js" },
-    { "src": "/", "dest": "/public/index.html" }
+    { "src": "/", "dest": "/index.html" }
   ]
 }
